This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

16-Sep-2009 (Zesstra)
  - 'status/malloc' commands include now the allocator in use (Patch from
      Xtian, #672)
    (slaballoc.c, xptmalloc.c, smalloc.c)

12-Sep 2009 (Fuchur)
  - fix some refcounting issues (interpret.c)

08-Sep 2009 (Zesstra)
  - Get permanently allocated memory in xml_pkg_strdup(), which is not
    subject to the GC to prevent some nasty problems.
    (pkg-xml2.c)

04-Sep-2009 (Zesstra)
  - Fixed initialization of libxml2 (#671).
    LIBXML_TEST_VERSION already allocates memory, so xmlMemSetup() has to be
    called before that macro. Otherwise crashes may occur.
    (pkg-xml2.c)
  - Use the 'permanent' variants of our allocation function, because the
    memory used by libxml2 should not be subject to the garbage collector.
    (pkg-xml2.c, pkg-iksemel.c)

01-Sep-2009 (Gnomi)
  - Fixed a crash in symbol_function with very long function names
    by removing the necessity of an alloca and giving make_shared_identifier
    the length of the identifier as an additional parameter.
    (lex.c, prolang.y)

03-Aug-2009 (Gnomi)
  - Memory corruption when using protected string ranges.
    (interpret.c)

20-Jul-2009 (Gnomi)
  - Set a maximum number of retries for reading data (in case the
    underlying functions go crazy and cause an endless loop).
    (pkg-gnutls.c, pkg-openssl.c)

23-Jun-2009 (Gnomi)
  - Corrected a memory leak in send_udp.
    (comm.c)
  - String corruption by present_clone.
    (efuns.c)

15-Jun-2009 (Fuchur)
  - (parse.c) Fix off-by-one error in find_string(). It returned a wrong index.

30-May-2009 (LDMud Team)  (3.3.719)
  - Created snapshot.

29-May-2009 (Gnomi)
  - (call_out.c) Preserve the order of call_out()s.
  - (mudlib/deprecated/hash.c) Added sefuns md5() and sha1().
  - (configure) Added a bunch of quotation marks.

28-May-2009 (Zesstra)